# Foundry-Local

./: .gitignore
samples/: README.md
samples/cs/: README.md
samples/cs/embeddings/: Embeddings.csproj  Program.cs
samples/js/: README.md
samples/js/embeddings/: package.json
samples/js/native-embeddings/: app.js  package.json
samples/python/: README.md
samples/python/embeddings/: requirements.txt
samples/python/embeddings/src/: app.py
samples/rust/: Cargo.toml  README.md
samples/rust/embeddings/: Cargo.toml
samples/rust/embeddings/src/: main.rs
samples/rust/native-embeddings/: Cargo.toml
sdk/cs/: README.md
sdk/cs/docs/api/: index.md  microsoft.ai.foundry.local.imodel.md  microsoft.ai.foundry.local.model.md  microsoft.ai.foundry.local.modelvariant.md  microsoft.ai.foundry.local.openaiembeddingclient.md
sdk/cs/src/: IModel.cs
sdk/cs/src/Detail/: JsonSerializationContext.cs  Model.cs  ModelVariant.cs
sdk/cs/src/OpenAI/: EmbeddingClient.cs  EmbeddingRequestResponseTypes.cs
sdk/cs/test/FoundryLocal.Tests/: EmbeddingClientTests.cs
sdk/js/: README.md
sdk/js/docs/: README.md
sdk/js/src/: imodel.ts  index.ts
sdk/js/src/detail/: model.ts  modelVariant.ts
sdk/js/src/openai/: embeddingClient.ts
sdk/js/test/: testUtils.ts
sdk/js/test/openai/: embeddingClient.test.ts
sdk/python/: README.md
sdk/python/src/: imodel.py
sdk/python/src/detail/: model.py  model_variant.py
sdk/python/src/openai/: __init__.py  embedding_client.py
sdk/python/test/: conftest.py
sdk/python/test/openai/: test_embedding_client.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/docs/: api.md
sdk/rust/src/detail/: model.rs  model_variant.rs
sdk/rust/src/openai/: embedding_client.rs  mod.rs
sdk/rust/tests/integration/: embedding_client_test.rs  main.rs
sdk/rust/tests/integration/common/: mod.rs
